--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -14,7 +14,6 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -527,3 +526,12 @@ footer {
   }
 }
 
+
+
+.error{
+  color: red;
+  font-size: 16px;
+  margin-top: 5px;  
+  display: none;
+
+}
