Form NoValidate + NoScroll on modal

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -17,6 +17,10 @@
   display: none;
 }
 
+.modal-open {
+  overflow: hidden;
+}
+   
 #successMessage p{
   padding: 8px 16px;
   width: fit-content;
