--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -102,6 +102,14 @@ img {
 }
 
 @media screen and (max-width: 768px) {
+  .topnav{
+    position: fixed;
+    z-index: 15;
+    width: 100%;
+    background-color: white;
+    margin: 0;
+    padding: 3.5%;
+  }
   .topnav a {
     display: none;
   }
@@ -110,32 +118,39 @@ img {
     float: right;
     display: block;
   }
-}
 
-@media screen and (max-width: 768px) {
   .topnav.responsive {
     position: relative;
   }
 
   .topnav.responsive .icon {
     position: absolute;
-    right: 0;
-    top: 20px;
+    right: 15px;
+    top: 15px;
   }
 
   .topnav.responsive a {
     float: none;
     display: block;
-
     text-align: left;
   }
 
+  .hero-content{
+    margin-top: 60px;
+  }
+
+  a.active{
+    margin-top: 50px;
+  }
 
 }
 
 
-
 @media screen and (max-width: 540px) {
+  a.active{
+    margin-top: 20px;
+  }
+
   .topnav a {
     display: none;
   }
@@ -143,7 +158,6 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
   }
 
   .content {
@@ -632,4 +646,9 @@ footer {
     margin: 0;
     height: 100%;
   }
+
+  .hero-headline {
+    font-size: 3rem;
+  }
+
 }
